logs/data-explorer.log
Listing '.'...
Listing './bin'...
Compiling './bin/date2unixtime.py'...
***   File "./bin/date2unixtime.py", line 46
    print delim.join(fields)
              ^
SyntaxError: invalid syntax

Compiling './bin/describe.py'...
***   File "./bin/describe.py", line 20
    print '  '.join(headers)
             ^
SyntaxError: invalid syntax

Compiling './bin/fit_curve.py'...
***   File "./bin/fit_curve.py", line 52
    print fstr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/plotter.py'...
***   File "./bin/plotter.py", line 150
    print "Option %s is not supported for rolling plots." % name
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/data_explorer'...
Compiling './lib/python3.5/site-packages/data_explorer/date2unixtime.py'...
***   File "./lib/python3.5/site-packages/data_explorer/date2unixtime.py", line 46
    print delim.join(fields)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/data_explorer/describe.py'...
***   File "./lib/python3.5/site-packages/data_explorer/describe.py", line 20
    print '  '.join(headers)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/data_explorer/fit_curve.py'...
***   File "./lib/python3.5/site-packages/data_explorer/fit_curve.py", line 52
    print fstr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/data_explorer/plotter.py'...
***   File "./lib/python3.5/site-packages/data_explorer/plotter.py", line 150
    print "Option %s is not supported for rolling plots." % name
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/data_explorer-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
